src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 229, 229, 229;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 16, 16, 16;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom,
      transparent,
      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
  height: 100%;
}

html {
  height: 100%;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer components {

  .skeleton1-styles {
    @apply rounded-sm bg-skeleton1_light dark:bg-skeleton1_dark animate-pulse
  }
  
  .skeleton2-styles {
    @apply rounded-sm bg-skeleton2_light dark:bg-skeleton2_dark animate-pulse
  }

  
  .scrollbar-previews::-webkit-scrollbar {
    @apply bg-inherit w-[0.5em] rounded-sm dark:bg-custom_black dark:rounded-md dark:w-[1em] 
  }
  
  .scrollbar-previews::-webkit-scrollbar-thumb {
    @apply bg-prev_post_gray-scroll rounded-sm dark:bg-custom_gray-dark dark:rounded-md dark:w-[1em]
  }
  
  .scrollbar-post::-webkit-scrollbar {
    @apply bg-inherit w-[0.5em] rounded-sm dark:w-[0.4em]
  }
  
  .scrollbar-post::-webkit-scrollbar-thumb {
    @apply bg-post_gray-scroll rounded-md dark:bg-custom_gray-dark
  }
}

.postContentLink {
  @apply text-anchor_blue dark:text-anchor_blue_dark
}

